BUG#4788 - show create table provides incorrect statement. Added code to adjust the field_length of user variables in dependence on the field type. Aded new constants for numeric field widths.